--- a/WinQuake/id1/autoexec.cfg
+++ b/WinQuake/id1/autoexec.cfg
@@ -18,7 +18,7 @@ bind "7" "impulse 7"
 bind "8" "impulse 8"
 bind "=" "sizeup"
 bind "\" "+mlook"
-bind "`" "toggleconsole"
+bind "^" "toggleconsole"
 bind "a" "+moveleft"
 bind "c" "+movedown"
 bind "d" "+moveright"
@@ -73,7 +73,7 @@ vid_window_x "575.000000"
 block_switch "0"
 vid_windowed_mode "0"
 vid_fullscreen_mode "3"
-_windowed_mouse "0"
+windowed_mouse "0"
 vid_stretch_by_2 "1"
 vid_config_y "1080"
 vid_config_x "1920"
